--- a/web-1/style.css
+++ b/web-1/style.css
@@ -3,6 +3,7 @@ body{
     background-color: #f3f3f3fa;
     font-size: 18px;
     line-height: 1.6em;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container{
@@ -11,14 +12,21 @@ body{
 }
 
 #head{
-    background-color: coral;
+    background-color: lightblue;
     padding: 10px;
-    color:white;
+    color:black;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    border-radius: 3px;
+    text-shadow: 2px 2px #8e679b;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 #menu{
-    background-color:black;
+    background-color:rgb(34, 33, 33);
     color: white;
     padding:10px;
+    border-radius: 3px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    text-transform: uppercase;
 }
 #menu ul{
     padding-left: 0;
@@ -30,7 +38,7 @@ body{
     
 }
 #menu a{
-    font-size: 18px;
+    font-size: 17px;
     text-decoration: none;
     color: white;
 }
@@ -39,34 +47,43 @@ body{
 }
 
 #showcase{
-    background-image: url(img/background.jpg);
-    background-repeat: no repeat;
+    background: linear-gradient(15deg, #58205c, #7c2d63, #9d3f69, #bb546c, #d66c6f, #ed8872, #ffa578); 
     padding: 10px;
     min-height: 300px;
     text-align: center;
     margin-bottom: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: azure;
+    border-radius: 3px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+
 }
 
 #showcase h1{
     margin: 0;
-    padding-top: 50px;
+    padding:30px 0 30px 0;
     font-size: 2em;
     line-height: 2em;
+    text-shadow: 2px 2px #ff4800;
 }
 
 #main {
     width: 70%;
     padding: 10px;
     box-sizing: border-box;
-    float:left
+    float:left;
+    font-weight: 500;
 }
 #sidebar {
     width: 30%;
-    padding: 10px;
+    padding: 20px;
     box-sizing: border-box;
-    background-color: black;
-    color: white;
+    background-color: wheat;
+    color: black;
     float: right;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 10px;
+    font-weight: 600;
 }
 .clear{
     clear: both;
@@ -81,10 +98,27 @@ body{
     font-size:22px;
     margin-top: 50px;
 }
-
+/* Responsive Design */
 @media(max-width:768px){
     #head{
         text-align: center;
+    }
+    #head h1{
+        font-size:35px;
+    }
+    #menu li{
+        display:block;
+        text-align: center;
+        background-color:azure;
+        margin: 5px;
+        border-radius: 2px;
+    }
+    #menu a{
+        color:black;
+        font-weight: 700;
+    }
+    #showcase h1{
+        font-size: 30px;
     }
     #main{
         float:none;
@@ -93,5 +127,8 @@ body{
     #sidebar{
         float:none;
         width:100%;
+    }
+    #footer p{
+        font-size: 16px;
     }
 }
