--- a/web-4/style.css
+++ b/web-4/style.css
@@ -96,6 +96,9 @@ box-shadow: 0 1px 3px rgba(0,0,0,.1),0 2px 2px rgba(0,0,0,.06),0 0 2px rgba(0,0,
     }
     #showcase h1{
 
-        font-size: 2em;
+        font-size: 2.1em;
+    }
+    #showcase h4{
+        font-size: 1.4;
     }
 }
