--- a/web-4/style.css
+++ b/web-4/style.css
@@ -62,20 +62,23 @@ body{
     font-weight: bolder;
     text-shadow: 3px 3px #ddcece;
 }
-#showcase div:first-child p{
+#showcase .showcase-heading p{
     padding: 5px 0;
     text-shadow: 1px 1px rgb(141, 139, 139);
 }
-#showcase div:last-child{
+#showcase .phone{
     padding: 20px;
+}
+#showcase .phone h4{
     font-family: 'Times New Roman', Times, serif;
-    font-size: 2.7em;
+    font-size: 3.8em;
     color: #383737;
     text-shadow: 2px 2px #e6d1d1;
 }
-/* Responsive design 
-box-shadow: 0 1px 3px rgba(0,0,0,.1),0 2px 2px rgba(0,0,0,.06),0 0 2px rgba(0,0,0,.07);
-*/
+
+
+
+/* Responsive design */
 @media(max-width:768px){
     #head{
         flex-direction: column;
@@ -88,17 +91,16 @@ box-shadow: 0 1px 3px rgba(0,0,0,.1),0 2px 2px rgba(0,0,0,.06),0 0 2px rgba(0,0,
         margin: 10px 0;
     }
     #head .menu ul li a{
-        font-size: 0.89em;
+        font-size: 0.9em;
     }
     #showcase{
         max-height: 400px;
         padding:10px
     }
     #showcase h1{
-
         font-size: 2.1em;
     }
-    #showcase h4{
-        font-size: 0.9em;
+    #showcase .phone h4{
+        font-size: 2.5em;
     }
 }
