--- a/web-4/style.css
+++ b/web-4/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display&family=Open+Sans:wght@500&family=Roboto+Condensed&family=Roboto+Slab:wght@400;600&family=Roboto:wght@300;400;500&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -5,7 +7,7 @@
     /* border:1px solid blue; */
 }
 body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 /* header */
 #head{
@@ -76,10 +78,53 @@ body{
     text-shadow: 2px 2px #e6d1d1;
 }
 
+/* About */
+#about{
+    display: flex;
+    justify-content:center;
+    align-items: stretch;
+    padding:15px;
+}
+#about .about-a{
+    margin: 20px 20px 20px 60px;
+    flex:60%;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items:center;
+}
+#about .about-a h2{
+    font-family: 'Roboto slab', serif;
+    font-size: 40px;
+    font-weight: 600;
+    text-shadow: 2px 2px #ebebeb;
+    padding: 20px;
+    margin: 5px;
+    color: #232523;
+}
+#about .about-a p{
+    padding: 20px;
+    margin: 10px;
+    line-height: 1.9;
+}
+#about .about-b{
+    flex: 40%;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    margin: 20px;
+
+}
+#about .about-b img{
+    width: calc(6 * 55px);
+    height: calc(6 * 91px);
+    border-radius: 10px;
+}
+
 
 
 /* Responsive design */
-@media(max-width:768px){
+@media(max-width:800px){
     #head{
         flex-direction: column;
         align-items: center;
@@ -94,13 +139,36 @@ body{
         font-size: 0.9em;
     }
     #showcase{
-        max-height: 350px;
-        padding:10px
+        padding:10px;
     }
     #showcase h1{
         font-size: 2.1em;
     }
     #showcase .phone h4{
         font-size: 2.1em;
+    }
+    /* About */
+    #about{
+        display: flex;
+        flex-direction: column-reverse;
+        padding: 10px;
+    }
+    #about .about-a,#about .about-b{
+        margin: 0;
+        padding:5px;
+    }
+    #about .about-a h2{
+       
+        font-size: 30px;
+        padding: 5px;
+        text-align: center;
+
+    }
+    #about .about-a p{
+        line-height: 1.4;
+        font-size: 15px;
+        letter-spacing: 0.7px;
+        /* text-align: center; */
+        
     }
 }
